tests/invalid/type/arity_file_read_too_few.pts
import Io;

function main() : void {
    var r = Io.openText("io_text.txt", "r");
    r.read();
}
